--- a/project/css/final.css
+++ b/project/css/final.css
@@ -22,12 +22,24 @@ body {
   background-size: cover;
 }
 
+
+nav {
+  font-family: "Arial", sans-serif;
+}
+
+
 h1 {
   font-family: "Pacifico", cursive;
   font-size: 80px;
   font-weight: 400;
   margin: 0;
+  text-shadow: 2px 2px #fff;
 }
+
+.navbar-brand {
+  font-family: "Pacifico", cursive;
+}
+
 
 h2, h3, h4 {
   font-family: "Open Sans", sans-serif;
@@ -102,7 +114,7 @@ nav a {
 }
 
 .profile,
-.skills,
+.pricing,
 .contact {
   color: #fff;
 }
@@ -186,37 +198,37 @@ nav a {
   color: #16a085;
 }
 
-/* SKILLS
+/* pricing
 ----------*/
-.skills {
+.pricing {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/background-1.jpg) no-repeat fixed 50%;
   background-size: cover;
   text-align: center;
   font-size: 20px;
 }
-.skills h3 {
+.pricing h3 {
   margin: 20px;
 }
-.skills h4 {
+.pricing h4 {
   margin-bottom: 10px;
   color: #16a085;
 }
-.skills i {
+.pricing i {
   color: #16a085;
 }
 
-.skills-list .columns {
+.pricing-list .columns {
   width: 33.33%;
   float: left;
 }
 
-.skills-list ul,
-.skills-circles ul {
+.pricing-list ul,
+.pricing-circles ul {
   list-style-type: none;
   padding: 0;
 }
 
-.skills-circles ul li {
+.pricing-circles ul li {
   height: 150px;
   width: 150px;
   line-height: 150px;
@@ -226,7 +238,7 @@ nav a {
   border-radius: 50%;
   background: black;
 }
-.skills-circles span {
+.pricing-circles span {
   line-height: normal;
   display: inline-block;
   vertical-align: middle;
