--- a/project/css/final.css
+++ b/project/css/final.css
@@ -28,15 +28,16 @@ nav {
 
 
 h1 {
-  font-family: "Pacifico", cursive;
+  font-family: "Satisfy", cursive;
   font-size: 80px;
-  font-weight: 400;
+  font-weight: 300;
   margin: 0;
-  text-shadow: 2px 2px #fff;
+  text-shadow: 5px 5px #0d0d0d;
 }
 
-.navbar-brand {
-  font-family: "Pacifico", cursive;
+.navbar-brand,
+.navbar-text {
+  font-family: "Satisfy", cursive;
 }
 
 
@@ -47,7 +48,7 @@ h2, h3, h4 {
 }
 
 h2, h3 {
-  text-transform: uppercase;
+  text-transform: none;
 }
 
 h2 {
@@ -60,18 +61,18 @@ section h2 {
 }
 
 a {
-  color: #16a085;
+  color: #0fa366;
   transition: all 0.5s ease;
 }
 a:hover {
-  color: #fff;
-  text-decoration: #fff;
+  color: #666666;
+  text-decoration: #666666;
 }
 
 .content-wrap {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 60px 0;
+  padding: 80px 0;
   /* and / or */
   width: 80%;
 }
@@ -81,8 +82,8 @@ a:hover {
 header {
   text-align: center;
   padding: 150px 0;
+  color: #f8f9fa;
 }
-
 
 /* NAVIGATION MENU
 -----------------------------------------*/
@@ -107,7 +108,6 @@ nav a {
 
 /* COMMON SECTION STYLES
 -------------------------*/
-.our-story,
 .how-works,
 .about-us {
   background: #fefefe;
@@ -119,17 +119,18 @@ nav a {
   color: #fff;
 }
 
-/* ABOUT ME / PROFILE
+/* PROFILE
 ----------------------*/
 .profile {
   background: rgba(0, 0, 0, 0.8);
 }
 .profile h2 {
-  background: #16a085;
+  background: #0fa366;
   display: inline-block;
   padding: 10px 20px;
-  transform: rotate(-4deg);
+  transform: scale(2deg);
   margin-bottom: 10px;
+  margin-top: 10px;
   border: none;
   transition: all 0.5s ease;
 }
@@ -138,21 +139,16 @@ nav a {
 }
 .profile .summary {
   float: left;
-  width: 70%;
+  width: 100%;
 }
-
-.profile-image {
-  width: 27%;
-  float: left;
-  padding: 4px;
-  margin-right: 3%;
-  border: 1px solid #ddd;
-  border-radius: 50%;
+.profile ul {
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
 }
-
-/* WORK EXPERIENCE & EDUCATION
+/* ABOUT US
 -------------------------------*/
-/* job & education entries */
+/* new section - timeline */
 .item {
   border-bottom: 1px solid #ccc;
   margin-bottom: 20px;
@@ -162,43 +158,28 @@ nav a {
   border-bottom: none;
   margin-bottom: 0;
 }
-
-/* WORK EXPERIENCE
--------------------*/
-.our-story .date {
-  margin: 5px 0 20px 0;
-  font-size: 12px;
-}
-.our-story h3 {
-  line-height: 1.25;
-  font-size: 16px;
-}
-.our-story strong {
-  font-weight: 400;
-  text-transform: uppercase;
-}
-.our-story .details {
+.about-us .details {
   float: left;
   width: 30%;
   padding-right: 30px;
 }
-.our-story .description {
-  font-size: 14px;
-  width: 70%;
+.about-us .description {
+  font-size: 15px;
+  width: 80%;
   float: right;
 }
-.our-story .description p:first-child {
+.about-us .description p:first-child {
   margin-top: 8px;
 }
-
-.company {
-  font-family: "Pacifico", cursive;
-  font-size: 20px;
+.date {
+  font-family: "Satisfy", cursive;
+  font-size: 30px;
+  font-weight: bolder;
   letter-spacing: 0.08em;
-  color: #16a085;
+  color: #0fa366;
 }
 
-/* pricing
+/* PRICING
 ----------*/
 .pricing {
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/background-1.jpg) no-repeat fixed 50%;
@@ -211,30 +192,27 @@ nav a {
 }
 .pricing h4 {
   margin-bottom: 10px;
-  color: #16a085;
+  color: #0fa366;
 }
 .pricing i {
-  color: #16a085;
+  color: #0fa366;
 }
-
 .pricing-list .columns {
   width: 33.33%;
   float: left;
 }
-
 .pricing-list ul,
 .pricing-circles ul {
   list-style-type: none;
   padding: 0;
 }
-
 .pricing-circles ul li {
   height: 150px;
   width: 150px;
   line-height: 150px;
   display: inline-block;
   padding: 0 10px;
-  border: 2px solid #16a085;
+  border: 2px solid #0fa366;
   border-radius: 50%;
   background: black;
 }
@@ -242,12 +220,6 @@ nav a {
   line-height: normal;
   display: inline-block;
   vertical-align: middle;
-}
-
-/* EDUCATION
--------------*/
-.education h4 {
-  color: #16a085;
 }
 
 /* CONTACT & FOOTER
@@ -261,7 +233,6 @@ nav a {
 .contact p:first-of-type {
   margin-top: 35px;
 }
-
 .social {
   width: 50%;
   float: right;
@@ -274,23 +245,22 @@ nav a {
 .social a:hover {
   color: white;
 }
-
 footer {
   clear: both;
   font-size: 12px;
   margin-top: 50px;
 }
 
-/* VISIT */
+/* VISIT
+---------*/
 .visit {
   background: url(../images/contact.jpg) no-repeat fixed;
   background-size: cover;
-
 }
 .visit form {
   background: white;
-  width: 600px;
-  margin: 10px auto;
+  width: 800px;
+  margin: 50px auto;
   border-radius: 4px;
   padding: 20px;
   position: center fixed;
@@ -313,7 +283,7 @@ footer {
 .visit form input[type="submit"] {
   width: auto;
   padding: 10px 20px;
-  background: #0e6e20;
+  background: #0fa366;
   color: white;
   cursor: pointer;
 }
