--- a/project/css/final.css
+++ b/project/css/final.css
@@ -22,22 +22,22 @@ body {
   background-size: cover;
 }
 
-
 nav {
   font-family: "Arial", sans-serif;
 }
 
 
 h1 {
-  font-family: "Pacifico", cursive;
+  font-family: "Satisfy", cursive;
   font-size: 80px;
-  font-weight: 400;
+  font-weight: 300;
   margin: 0;
-  text-shadow: 2px 2px #fff;
+  text-shadow: 5px 5px #0d0d0d;
 }
 
-.navbar-brand {
-  font-family: "Pacifico", cursive;
+.navbar-brand,
+.navbar-text {
+  font-family: "Satisfy", cursive;
 }
 
 
@@ -48,7 +48,7 @@ h2, h3, h4 {
 }
 
 h2, h3 {
-  text-transform: uppercase;
+  text-transform: none;
 }
 
 h2 {
@@ -61,18 +61,18 @@ section h2 {
 }
 
 a {
-  color: #16a085;
+  color: #0fa366;
   transition: all 0.5s ease;
 }
 a:hover {
-  color: #fff;
-  text-decoration: none;
+  color: #666666;
+  text-decoration: #666666;
 }
 
 .content-wrap {
   max-width: 1000px;
   margin: 0 auto;
-  padding: 60px 0;
+  padding: 80px 0;
   /* and / or */
   width: 80%;
 }
@@ -82,34 +82,14 @@ a:hover {
 header {
   text-align: center;
   padding: 150px 0;
+  color: #f8f9fa;
 }
 
-
-/* NAVIGATION MENU
------------------------------------------*/
-nav {
-  position: absolute;
-  right: 20px;
-  top: 20px;
-}
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-nav ul li {
-  display: inline-block;
-}
-nav a {
-  padding: 5px 15px;
-  text-transform: none;
-  color: white;
-}
 
 /* COMMON SECTION STYLES
 -------------------------*/
-.work-experience,
-.education {
+.how-works,
+.about-us {
   background: #fefefe;
 }
 
@@ -119,17 +99,18 @@ nav a {
   color: #fff;
 }
 
-/* ABOUT ME / PROFILE
+/* PROFILE
 ----------------------*/
 .profile {
   background: rgba(0, 0, 0, 0.8);
 }
 .profile h2 {
-  background: #16a085;
+  background: #0fa366;
   display: inline-block;
   padding: 10px 20px;
-  transform: rotate(-4deg);
+  transform: scale(2deg);
   margin-bottom: 10px;
+  margin-top: 10px;
   border: none;
   transition: all 0.5s ease;
 }
@@ -138,21 +119,16 @@ nav a {
 }
 .profile .summary {
   float: left;
-  width: 70%;
+  width: 100%;
 }
-
-.profile-image {
-  width: 27%;
-  float: left;
-  padding: 4px;
-  margin-right: 3%;
-  border: 1px solid #ddd;
-  border-radius: 50%;
+.profile ul {
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
 }
-
-/* WORK EXPERIENCE & EDUCATION
+/* ABOUT US
 -------------------------------*/
-/* job & education entries */
+/* new section - timeline */
 .item {
   border-bottom: 1px solid #ccc;
   margin-bottom: 20px;
@@ -162,46 +138,31 @@ nav a {
   border-bottom: none;
   margin-bottom: 0;
 }
-
-/* WORK EXPERIENCE
--------------------*/
-.work-experience .date {
-  margin: 5px 0 20px 0;
-  font-size: 12px;
-}
-.work-experience h3 {
-  line-height: 1.25;
-  font-size: 16px;
-}
-.work-experience strong {
-  font-weight: 400;
-  text-transform: uppercase;
-}
-.work-experience .details {
+.about-us .details {
   float: left;
   width: 30%;
   padding-right: 30px;
 }
-.work-experience .description {
-  font-size: 14px;
-  width: 70%;
+.about-us .description {
+  font-size: 15px;
+  width: 80%;
   float: right;
 }
-.work-experience .description p:first-child {
+.about-us .description p:first-child {
   margin-top: 8px;
 }
-
-.company {
-  font-family: "Pacifico", cursive;
-  font-size: 20px;
+.date {
+  font-family: "Satisfy", cursive;
+  font-size: 30px;
+  font-weight: bolder;
   letter-spacing: 0.08em;
-  color: #16a085;
+  color: #0fa366;
 }
 
-/* pricing
+/* PRICING
 ----------*/
 .pricing {
-  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../images/background-1.jpg) no-repeat fixed 50%;
+  background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(../images/background-1.jpg) no-repeat fixed 50%;
   background-size: cover;
   text-align: center;
   font-size: 20px;
@@ -211,30 +172,27 @@ nav a {
 }
 .pricing h4 {
   margin-bottom: 10px;
-  color: #16a085;
+  color: #0fa366;
 }
 .pricing i {
-  color: #16a085;
+  color: #0fa366;
 }
-
 .pricing-list .columns {
   width: 33.33%;
   float: left;
 }
-
 .pricing-list ul,
 .pricing-circles ul {
   list-style-type: none;
   padding: 0;
 }
-
 .pricing-circles ul li {
   height: 150px;
   width: 150px;
   line-height: 150px;
   display: inline-block;
   padding: 0 10px;
-  border: 2px solid #16a085;
+  border: 2px solid #0fa366;
   border-radius: 50%;
   background: black;
 }
@@ -242,12 +200,6 @@ nav a {
   line-height: normal;
   display: inline-block;
   vertical-align: middle;
-}
-
-/* EDUCATION
--------------*/
-.education h4 {
-  color: #16a085;
 }
 
 /* CONTACT & FOOTER
@@ -261,7 +213,6 @@ nav a {
 .contact p:first-of-type {
   margin-top: 35px;
 }
-
 .social {
   width: 50%;
   float: right;
@@ -274,9 +225,57 @@ nav a {
 .social a:hover {
   color: white;
 }
-
 footer {
   clear: both;
   font-size: 12px;
   margin-top: 50px;
 }
+
+/* VISIT
+---------*/
+.visit {
+  background: url(../images/contact.jpg) no-repeat fixed;
+  background-size: cover;
+}
+.visit form {
+  background: white;
+  width: 800px;
+  margin: 50px auto;
+  border-radius: 4px;
+  padding: 20px;
+  position: center fixed;
+}
+.visit form h2 {
+  text-align: center;
+}
+.visit form input, .visit form textarea {
+  width: 100%;
+  border: 1px solid #d8d8d8;
+  padding: 5px;
+}
+.visit form input:focus, .visit form textarea:focus {
+  outline: none;
+  border: 1px solid #bf6d50;
+}
+.visit form textarea {
+  height: 100px;
+}
+.visit form input[type="submit"] {
+  width: auto;
+  padding: 10px 20px;
+  background: #0fa366;
+  color: white;
+  cursor: pointer;
+}
+/* MAP
+---------*/
+    #map {
+      height: 400px;  /* The height is 400 pixels */
+      width: 100%;  /* The width is the width of the web page */
+     }
+/* EMPTY
+---------*/
+     #empty {
+       height: 100px;  /* The height is 400 pixels */
+       width: 100%;  /* The width is the width of the web page */
+      }
