--- a/project/css/final.css
+++ b/project/css/final.css
@@ -246,10 +246,10 @@ header {
 }
 
 .social {
-  width: 50%;
-  float: right;
-  text-align: right;
+  float: left;
+  text-align: left;
   font-size: 30px;
+  margin: 20px 0 0 -8px;
 }
 
 .social a {
